--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,7 @@
         <zip
             basedir="."
             destfile="${build.dir}/${project.app}-${project.version}.xar"
-            excludes="${build.dir}/* docker/* tests/**"
+            excludes="${build.dir}/* docker/** tests/**"
         />
     </target>
 </project>
